# collisionkit

./: .gitignore  CMakeLists.txt  README.md  index.cfg  index.xml
source/: collisionkit.cpp
